log
Fri, Apr 18, 2025 12:52:01 AM: 
 hashmap.c | 18 +++++++++++++++++-
 1 file changed, 17 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:62:9: error: 'return' with no value, in function returning non-void [-Werror]
         return;
         ^~~~~~
hashmap.c:54:11: note: declared here
 HashMap * createMap(long capacity) {
           ^~~~~~~~~
cc1.exe: all warnings being treated as errors
eeef3b7
Fri, Apr 18, 2025 12:53:01 AM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
4afd8a8
Fri, Apr 18, 2025  1:03:15 AM: 
 hashmap.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
 tests:  1|5
total_score: 10/70
b39e617
Fri, Apr 18, 2025  1:04:46 AM: 
 hashmap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  5|4
total_score: 30/70
007e8d9
Fri, Apr 18, 2025  1:15:36 AM: 
 hashmap.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  8|3
total_score: 40/70
e351744
Fri, Apr 18, 2025  1:21:08 AM: 
 hashmap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'eraseMap':
hashmap.c:95:30: error: statement with no effect [-Werror=unused-value]
     map->buckets[index]->key == NULL;
                              ^
cc1.exe: all warnings being treated as errors
618cf4e
Fri, Apr 18, 2025  1:21:20 AM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 40/70
b048b05
Fri, Apr 18, 2025  1:24:27 AM: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  9|3
total_score: 40/70
aa58537
Fri, Apr 18, 2025  1:26:50 AM: 
 hashmap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  9|3
total_score: 40/70
1859ca8
Fri, Apr 18, 2025  1:28:14 AM: 
 hashmap.c | 3 +++
 1 file changed, 3 insertions(+)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'eraseMap':
hashmap.c:104:12: error: 'return' with a value, in function returning void [-Werror]
     return NULL;
            ^~~~
hashmap.c:93:6: note: declared here
 void eraseMap(HashMap * map,  char * key) {
      ^~~~~~~~
cc1.exe: all warnings being treated as errors
1de988e
